crates/kms/src/snapshots/rustfs_kms__api_types__tests__kms_cancel_key_deletion_response.snap
---
source: crates/kms/src/api_types.rs
expression: "serde_json::to_value(CancelKeyDeletionResponse\n{\n    success: true, message: \"key deletion canceled\".to_string(), key_id:\n    \"key-a\".to_string(),\n}).expect(\"cancel deletion response should serialize\")"
---
{
  "key_id": "key-a",
  "message": "key deletion canceled",
  "success": true
}
