crates/kms/src/snapshots/rustfs_kms__api_types__tests__kms_configure_response.snap
---
source: crates/kms/src/api_types.rs
expression: "serde_json::to_value(ConfigureKmsResponse\n{\n    success: true, message: \"kms configured\".to_string(), status:\n    KmsServiceStatus::Configured,\n}).expect(\"configure response should serialize\")"
---
{
  "message": "kms configured",
  "status": "Configured",
  "success": true
}
