crates/kms/src/snapshots/rustfs_kms__api_types__tests__kms_tag_key_response.snap
---
source: crates/kms/src/api_types.rs
expression: "serde_json::to_value(TagKeyResponse\n{\n    success: true, message: \"key tags updated\".to_string(), key_id:\n    \"key-a\".to_string(),\n}).expect(\"tag key response should serialize\")"
---
{
  "key_id": "key-a",
  "message": "key tags updated",
  "success": true
}
