crates/kms/src/snapshots/rustfs_kms__api_types__tests__kms_untag_key_response.snap
---
source: crates/kms/src/api_types.rs
expression: "serde_json::to_value(UntagKeyResponse\n{\n    success: true, message: \"key tags removed\".to_string(), key_id:\n    \"key-a\".to_string(),\n}).expect(\"untag key response should serialize\")"
---
{
  "key_id": "key-a",
  "message": "key tags removed",
  "success": true
}
