crates/kms/src/snapshots/rustfs_kms__api_types__tests__kms_update_key_description_response.snap
---
source: crates/kms/src/api_types.rs
expression: "serde_json::to_value(UpdateKeyDescriptionResponse\n{\n    success: true, message: \"key description updated\".to_string(), key_id:\n    \"key-a\".to_string(),\n}).expect(\"update description response should serialize\")"
---
{
  "key_id": "key-a",
  "message": "key description updated",
  "success": true
}
