crates/kms/src/snapshots/rustfs_kms__api_types__tests__kms_vault_transit_config_summary.snap
---
source: crates/kms/src/api_types.rs
expression: stable_json_value(&summary)
---
{
  "backend_summary": {
    "address": "http://127.0.0.1:8200",
    "auth_method_type": "token",
    "backend_type": "vault-transit",
    "has_client_identity": false,
    "has_custom_ca": false,
    "has_stored_credentials": true,
    "mount_path": "transit",
    "namespace": "tenant-a",
    "skip_tls_verify": false
  },
  "backend_type": "VaultTransit",
  "cache_summary": {
    "enable_metrics": true,
    "max_keys": 1000,
    "ttl_seconds": 300
  },
  "cache_ttl_seconds": 300,
  "default_key_id": "rustfs-master-key",
  "enable_cache": true,
  "max_cached_keys": 1000,
  "retry_attempts": 3,
  "timeout_seconds": 30
}
